# rust-jp-location-relation

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/data/: city_relation.tsv
