[package]
name = "jp-location-relation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["uiuifree"]
description = "隣接する市区町村の一覧を取得"
license = "MIT"

[dependencies]
encoding_rs = "0.8"
csv="1.1"
lazy_static="1.4"
